css/style.css
body {
	--white: rgba(255, 255, 255, 1);
	--white-gray: rgba(255, 255, 255, 0.85);
	--dark-gray: #343b42;
	background: url("../img/wallpaper1.jpg") no-repeat center center fixed;
	background-size: cover;
	font-family: 'Roboto', sans-serif;
	color: var(--white);
	margin: 0;
	overflow: hidden;
}

main {
	display: grid;
	height: 100vh;
	padding: 20px;
	box-sizing: border-box;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 1fr 3fr 3fr 1fr;
	transition: opacity 0.5s;
}

input {
	font-size: inherit;
	color: inherit;
	background: none;
	border: none;
	outline: none;
	border-bottom: 2px white solid;
}

/*-----Web Styling-----*/
#web {
	display: flex;
}

.focus {
	transition: 0.25s ease all;
	color: var(--white-gray);	
}

.links {
	margin-right: 15px;
}

.links a {
	text-decoration: none;
}

.links a:hover {
	color: var(--white);
}

.fa-search {
	position: absolute;
	left: 75px;
	font-size: 95%;
	padding-top: 2px;
	z-index: 1;
}

.fa-google {
	position: absolute;
	left: 287px;
	font-size: 86%;
	padding-top: 3px;
	opacity: 0;
	visibility: "hidden";
	color: var(--white);
}

.search:hover .fa-search {
	color: var(--white);
}

.search input:focus + .fa-search {
	color: var(--white);
}

.search input {
	position: relative;
	visibility: "hidden";
	opacity: 0;
	width: 180px;
	padding: 0 27px 8px 27px;
	color: var(--white);
	cursor: pointer;
	font-size: 95%;
	z-index: 2;
}

.search:hover input, .search:hover input ~ .fa-google {
	visibility: "visible";
	opacity: 0.5;
}

.search input:focus, .search input:focus ~ .fa-google {
	opacity: 1;
}

/*-----Weather Styling-----*/
#weather {
	justify-self: end;
	grid-column: 3;
	display: flex;
	justify-content: flex-start;
	align-items: flex-end;
	flex-direction: column;
}

#weather i {
	font-size: 23px;
	margin-right: 4px;
}

.temp-container {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	cursor: pointer;
	font-size: 24px;
}

.temp-container .tooltip {
	top: 39px;
	right: 6px;
}

.city-container {
	display: flex;
	align-items: flex-start;
	cursor: pointer;
	font-size: 13px;
	color: var(--white-gray);
}

.city-container .tooltip {
	top: 61px;
	right: 0px;
}

.tooltip {
	visibility: hidden;
	opacity: 0;
	position: absolute;
	font-size: 12px;
	color: var(--dark-gray);
	background-color: var(--white);
	padding: 2px 5px;
	border: 1px solid var(--dark-gray);
	transition: opacity 0.5s;
}

#weather div:hover .tooltip {
	visibility: visible;
	opacity: 1;
}

/*-----Greeting Styling-----*/
#greeting {
	grid-column: 1 / 4;
	justify-self: center;
	align-self: end;
	margin-top: 25vh;
}

.time {
	font-size: 10.5em;
	text-align: center;
	margin: -25px 0;
}

.welcome {
	font-size: 3.5em;
	text-align: center;
}

.prompt {
	margin-top: 10vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	font-size: 3.5em;
	opacity: 0;
	transition: opacity 1s;
}

.prompt input {
	width: 90%;
	text-align: center;
	margin-top: 12px;
	border-bottom-width: 3px;
}

@media only screen and (max-height: 700px) {
	.time {
		font-size: 10em;
	}
	.welcome {
		font-size: 3.2em;
	}
}

@media only screen and (max-height: 650px) {
	.time {
		font-size: 9em;
	}	
	.welcome {
		font-size: 2.8em;
	}
}

@media only screen and (max-height: 600px) {
	.time {
		font-size: 8.5em;
	}	
	.welcome {
		font-size: 2.7em;
	}
}

@media only screen and (max-height: 550px) {
	.time {
		font-size: 7.5em;
	}	
	.welcome {
		font-size: 2.4em;
	}
}

@media only screen and (max-height: 400px) {
	.time {
		display: none;
	}
}

/*-----Main Focus Styling-----*/
#main-focus {
	grid-column: 1 / 4;
	justify-self: center; 
	align-self: start;
}

/*-----Photo Credit Styling-----*/
#photo-credit {
	align-self: end;
}


/*-----Quote Styling-----*/
#quote {
	align-self: end;
}

.quote {
	text-align: center;
}

.quote-author {
	display: none;
}


/*-----Todo Styling-----*/
#todo {
	align-self: end;
	justify-self: end;
}

#todo span {
	transition: 0.25s ease all;
	color: var(--white-gray);
}

#todo span:hover {
	color: var(--white);
	cursor: pointer;
}

